latest/en some tab headers

--- a/versions/latest/modules/en/pages/cluster-deployment/infra-providers/azure/azure.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/infra-providers/azure/azure.adoc
@@ -46,11 +46,16 @@ The creation of this service principal returns three pieces of identification in
 
 [tabs]
 ======
+. <<1-create-your-cloud-credentials,Create your cloud credentials>>
+. <<2-create-a-node-template-with-your-cloud-credentials,Create a node template with your cloud credentials>>
+. <<3-create-a-cluster-with-node-pools-using-the-node-template,Create a cluster with node pools using the node template>>
+
 Tab RKE::
 +
 --
+[#_rke_1_create_your_cloud_credentials]
 [pass]
-<h3><a id="_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
+<h3><a class="anchor" id="_rke_1_create_your_cloud_credentials" href="#_rke_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
 
 . Click *☰ > Cluster Management*.
 . Click *Cloud Credentials*.
@@ -61,8 +66,9 @@ Tab RKE::
 
 *Result:* You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters.
 
+[#_2_create_a_node_template_with_your_cloud_credentials]
 [pass]
-<h3><a id="_2_create_a_node_template_with_your_cloud_credentials"></a>2. Create a node template with your cloud credentials</h3>
+<h3><a class="anchor" id="_2_create_a_node_template_with_your_cloud_credentials" href="#_2_create_a_node_template_with_your_cloud_credentials"></a>2. Create a node template with your cloud credentials</h3>
 
 Creating a xref:cluster-deployment/infra-providers/infra-providers.adoc#_node_templates[node template] for Azure will allow Rancher to provision new nodes in Azure. Node templates can be reused for other clusters.
 
@@ -72,8 +78,9 @@ Creating a xref:cluster-deployment/infra-providers/infra-providers.adoc#_node_te
 . Click *Azure*.
 . Fill out a node template for Azure. For help filling out the form, refer to xref:cluster-deployment/infra-providers/azure/node-template-configuration.adoc[Azure Node Template Configuration.]
 
+[#_3_create_a_cluster_with_node_pools_using_the_node_template]
 [pass]
-<h3><a id="_3_create_a_cluster_with_node_pools_using_the_node_template"></a>3. Create a cluster with node pools using the node template</h3>
+<h3><a class="anchor" id="_3_create_a_cluster_with_node_pools_using_the_node_template" href="#_3_create_a_cluster_with_node_pools_using_the_node_template"></a>3. Create a cluster with node pools using the node template</h3>
 
 Use Rancher to create a Kubernetes cluster in Azure.
 
@@ -90,8 +97,9 @@ Use Rancher to create a Kubernetes cluster in Azure.
 Tab RKE2::
 +
 --
+[#_rke2_1_create_your_cloud_credentials]
 [pass]
-<h3><a id="_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
+<h3><a class="anchor" id="_rke2_1_create_your_cloud_credentials" href="#_rke2_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
 
 If you already have a set of cloud credentials to use, skip this section.
 
@@ -104,8 +112,9 @@ If you already have a set of cloud credentials to use, skip this section.
 
 *Result:* You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters.
 
+[#_2_create_your_cluster]
 [pass]
-<h3><a id="_2_create_your_cluster"></a>2. Create your cluster</h3>
+<h3><a class="anchor" id="_2_create_your_cluster" href="#_2_create_your_cluster"></a>2. Create your cluster</h3>
 
 Use Rancher to create a Kubernetes cluster in Azure.
 
