--- a/versions/latest/modules/en/pages/cluster-deployment/infra-providers/digitalocean/digitalocean.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/infra-providers/digitalocean/digitalocean.adoc
@@ -11,15 +11,13 @@ Then you will create a DigitalOcean cluster in Rancher, and when configuring the
 Tab RKE::
 +
 --
-:experimental:
-
 . <<_1_create_your_cloud_credentials,Create your cloud credentials>>
 . <<_2_create_a_node_template_with_your_cloud_credentials,Create a node template with your cloud credentials>>
 . <<_3_create_a_cluster_with_node_pools_using_the_node_template,Create a cluster with node pools using the node template>>
 
-[#_1_create_your_cloud_credentials]
+[#_rke_1_create_your_cloud_credentials]
 [pass]
-<h3><a id="_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
+<h3><a class="anchor" id="_rke_1_create_your_cloud_credentials" href="#_rke_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
 
 . Click *☰ > Cluster Management*.
 . Click *Cloud Credentials*.
@@ -32,7 +30,7 @@ Tab RKE::
 
 [#_2_create_a_node_template_with_your_cloud_credentials]
 [pass]
-<h3><a id="_2_create_a_node_template_with_your_cloud_credentials"></a>2. Create a node template with your cloud credentials</h3>
+<h3><a class="anchor" id="_2_create_a_node_template_with_your_cloud_credentials" href="#_2_create_a_node_template_with_your_cloud_credentials"></a>2. Create a node template with your cloud credentials</h3>
 
 Creating a xref:cluster-deployment/infra-providers/infra-providers#_node_templates[node template] for DigitalOcean will allow Rancher to provision new nodes in DigitalOcean. Node templates can be reused for other clusters.
 
@@ -44,8 +42,7 @@ Creating a xref:cluster-deployment/infra-providers/infra-providers#_node_templat
 
 [#_3_create_a_cluster_with_node_pools_using_the_node_template]
 [pass]
-<a id="_3_create_a_cluster_with_node_pools_using_the_node_template">
-<h3><a id="_3_create_a_cluster_with_node_pools_using_the_node_template"></a>3. Create a cluster with node pools using the node template</h3>
+<h3><a class="anchor" id="_3_create_a_cluster_with_node_pools_using_the_node_template" href="#_3_create_a_cluster_with_node_pools_using_the_node_template"></a>3. Create a cluster with node pools using the node template</h3>
 
 . Click *☰ > Cluster Management*.
 . On the *Clusters* page, click *Create*.
@@ -60,8 +57,9 @@ Creating a xref:cluster-deployment/infra-providers/infra-providers#_node_templat
 Tab RKE2::
 +
 --
+[#_rke2_1_create_your_cloud_credentials]
 [pass]
-<h3><a id="_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
+<h3><a class="anchor" id="_rke2_1_create_your_cloud_credentials" href="#_rke2_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
 
 If you already have a set of cloud credentials to use, skip this section.
 
@@ -72,8 +70,9 @@ If you already have a set of cloud credentials to use, skip this section.
 . Enter your Digital Ocean credentials.
 . Click *Create*.
 
+[#_2_create_your_cluster]
 [pass]
-<h3><a id="_2_create_your_cluster"></a>2. Create your cluster</h3>
+<h3><a class="anchor" id="_2_create_your_cluster" href="#_2_create_your_cluster"></a>2. Create your cluster</h3>
 
 Use Rancher to create a Kubernetes cluster in DigitalOcean.
 
