--- a/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/infrastructure-private-registry.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/infrastructure-private-registry.adoc
@@ -21,8 +21,9 @@ We recommend setting up the following infrastructure for a high-availability ins
 * *A DNS record* to map a URL to the load balancer. This will become the Rancher server URL, and downstream Kubernetes clusters will need to reach it.
 * *A private image registry* to distribute container images to your machines.
 
+[#_k3s_1_set_up_linux_nodes]
 [pass]
-<h2><a id="_1_set_up_linux_nodes"></a>1. Set up Linux Nodes</h2>
+<h3><a class="anchor" id="_k3s_1_set_up_linux_nodes" href="#_k3s_1_set_up_linux_nodes"></a>1. Set up Linux Nodes</h3>
 
 These hosts will be disconnected from the internet, but require being able to connect with your private registry.
 
@@ -30,8 +31,9 @@ Make sure that your nodes fulfill the general installation requirements for xref
 
 For an example of one way to set up Linux nodes, refer to this xref:installation-and-upgrade/infrastructure-setup//nodes-in-amazon-ec2.adoc[tutorial] for setting up nodes as instances in Amazon EC2.
 
+[#_2_set_up_external_datastore]
 [pass]
-<h2><a id="_2_set_up_external_datastore"></a>2. Set up External Datastore</h2>
+<h3><a class="anchor" id="_2_set_up_external_datastore" href="#_2_set_up_external_datastore"></a>2. Set up External Datastore</h3>
 
 The ability to run Kubernetes using a datastore other than etcd sets K3s apart from other Kubernetes distributions. This feature provides flexibility to Kubernetes operators. The available options allow you to select a datastore that best fits your use case.
 
@@ -47,8 +49,9 @@ For an example of one way to set up the database, refer to this xref:installatio
 
 For the complete list of options that are available for configuring a K3s cluster datastore, refer to the https://rancher.com/docs/k3s/latest/en/installation/datastore/[K3s documentation.]
 
+[#_k3s_3_set_up_the_load_balancer]
 [pass]
-<h2><a id="_3_set_up_the_load_balancer"></a>3. Set up the Load Balancer</h2>
+<h3><a class="anchor" id="_k3s_3_set_up_the_load_balancer" href="#_k3s_3_set_up_the_load_balancer"></a>3. Set up the Load Balancer</h3>
 
 You will also need to set up a load balancer to direct traffic to the Rancher replica on both nodes. That will prevent an outage of any single node from taking down communications to the Rancher management server.
 
@@ -73,8 +76,9 @@ Do not use this load balancer (i.e, the `local` cluster Ingress) to load balance
 ====
 
 
+[#_k3s_4_set_up_the_dns_record]
 [pass]
-<h2><a id="_4_set_up_the_dns_record"></a>4. Set up the DNS Record</h2>
+<h3><a class="anchor" id="_k3s_4_set_up_the_dns_record" href="#_k3s_4_set_up_the_dns_record"></a>4. Set up the DNS Record</h3>
 
 Once you have set up your load balancer, you will need to create a DNS record to send traffic to this load balancer.
 
@@ -84,8 +88,9 @@ You will need to specify this hostname in a later step when you install Rancher,
 
 For a how-to guide for setting up a DNS record to route domain traffic to an Amazon ELB load balancer, refer to the https://docs.aws.amazon.com/Route53/latest/DeveloperGuide/routing-to-elb-load-balancer[official AWS documentation.]
 
+[#_k3s_5_set_up_a_private_image_registry]
 [pass]
-<h2><a id="_5_set_up_a_private_image_registry"></a>5. Set up a Private Image Registry</h2>
+<h3><a class="anchor" id="_k3s_5_set_up_a_private_image_registry" href="#_k3s_5_set_up_a_private_image_registry"></a>5. Set up a Private Image Registry</h3>
 
 Rancher supports air gap installs using a private registry. You must have your own private registry or other means of distributing container images to your machines.
 
@@ -110,15 +115,17 @@ To install the Rancher management server on a high-availability RKE cluster, we 
 
 These nodes must be in the same region/data center. You may place these servers in separate availability zones.
 
+[#_why_three_nodes]
 [pass]
-<h2><a id="_why_three_nodes"></a>Why Three Nodes?</h2>
+<h3><a class="anchor" id="_why_three_nodes" href="#_why_three_nodes"></a>Why Three Nodes?</h3>
 
 In an RKE cluster, Rancher server data is stored on etcd. This etcd database runs on all three nodes.
 
 The etcd database requires an odd number of nodes so that it can always elect a leader with a majority of the etcd cluster. If the etcd database cannot elect a leader, etcd can suffer from [split brain](https://www.quora.com/What-is-split-brain-in-distributed-systems), requiring the cluster to be restored from backup. If one of the three etcd nodes fails, the two remaining nodes can elect a leader because they have the majority of the total number of etcd nodes.
 
+[#_rke_1_set_up_linux_nodes]
 [pass]
-<h2><a id="_1_set_up_linux_nodes"></a>1. Set up Linux Nodes</h2>
+<h3><a class="anchor" id="_rke_1_set_up_linux_nodes" href="#_rke_1_set_up_linux_nodes"></a>1. Set up Linux Nodes</h3>
 
 These hosts will be disconnected from the internet, but require being able to connect with your private registry.
 
@@ -126,8 +133,9 @@ Make sure that your nodes fulfill the general installation requirements for [OS,
 
 For an example of one way to set up Linux nodes, refer to this xref:installation-and-upgrade/infrastructure-setup/nodes-in-amazon-ec2.adoc[tutorial] for setting up nodes as instances in Amazon EC2.
 
+[#_rke_2_set_up_the_load_balancer]
 [pass]
-<h2><a id="_2_set_up_the_load_balancer"></a>2. Set up the Load Balancer</h2>
+<h3><a class="anchor" id="_rke_2_set_up_the_load_balancer" href="#_rke_2_set_up_the_load_balancer"></a> 2. Set up the Load Balancer</h3>
 
 You will also need to set up a load balancer to direct traffic to the Rancher replica on both nodes. That will prevent an outage of any single node from taking down communications to the Rancher management server.
 
@@ -150,8 +158,9 @@ Do not use this load balancer (i.e, the `local` cluster Ingress) to load balance
 
 :::
 
+[#_rke_3_set_up_the_dns_record]
 [pass]
-<h2><a id="_3_set_up_the_dns_record"></a>3. Set up the DNS Record</h2>
+<h3><a class="anchor" id="_rke_3_set_up_the_dns_record" href="#_rke_3_set_up_the_dns_record"></a>3. Set up the DNS Record</h3>
 
 Once you have set up your load balancer, you will need to create a DNS record to send traffic to this load balancer.
 
@@ -161,8 +170,9 @@ You will need to specify this hostname in a later step when you install Rancher,
 
 For a how-to guide for setting up a DNS record to route domain traffic to an Amazon ELB load balancer, refer to the [official AWS documentation.](https://docs.aws.amazon.com/Route53/latest/DeveloperGuide/routing-to-elb-load-balancer)
 
+[#_rke_4_set_up_a_private_image_registry]
 [pass]
-<h2><a id="_4_set_up_a_private_image_registry"></a>4. Set up a Private Image Registry</h2>
+<h3><a class="anchor" id="_rke_4_set_up_a_private_image_registry" href="#_rke_4_set_up_a_private_image_registry"></a>4. Set up a Private Image Registry</h3>
 
 Rancher supports air gap installs using a secure private registry. You must have your own private registry or other means of distributing container images to your machines.
 
