--- a/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
@@ -366,3 +366,6 @@ chmod +x rancher-load-images.sh
 ----
 --
 ======
+
+== xref:./install-kubernetes.adoc[Next step for Kubernetes Installs - Launch a Kubernetes Cluster]
+
