--- a/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-kubernetes.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-kubernetes.adoc
@@ -141,8 +141,9 @@ sudo systemctl daemon-reload
 sudo systemctl restart docker
 ----
 
+[#_air_gapped_proxy]
 [pass]
-<h2><a id="_air-gapped_proxy"></a>Air-gapped proxy</h2>
+<h3><a class="anchor" id="_air_gapped_proxy" href="#_air_gapped_proxy"></a>Air-gapped proxy</h3>
 
 You can now provision node driver clusters from an air-gapped cluster configured to use a proxy for outbound connections.
 
@@ -158,8 +159,9 @@ acl Safe_ports port 22      # ssh
 acl Safe_ports port 2376    # docker port
 ----
 
+[#_creating_the_rke_cluster]
 [pass]
-<h2><a id="_creating_the_rke_cluster"></a>Creating the RKE Cluster</h2>
+<h3><a class="anchor" id="_creating_the_rke_cluster" href="#_creating_the_rke_cluster"></a>Creating the RKE Cluster</h3>
 
 You need several command line tools on the host where you have SSH access to the Linux nodes to create and interact with the cluster:
 
@@ -223,8 +225,9 @@ You can also verify that your external load balancer works, and the DNS entry is
  $ curl rancher.example.com
  default backend - 404
 
+[#_save_your_files]
 [pass]
-<h2><a id="_save_your_files"></a>Save Your Files</h2>
+<h3><a class="anchor" id="_save_your_files" href="#_save_your_files"></a>Save Your Files</h3>
 
 [NOTE]
 .Important:
