--- a/versions/latest/modules/en/pages/cluster-deployment/infra-providers/aws/aws.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/infra-providers/aws/aws.adoc
@@ -25,8 +25,13 @@ The steps to create a cluster differ based on your Rancher version.
 Tab RKE::
 +
 --
+. <<1-create-your-cloud-credentials,Create your cloud credentials>>
+. <<2-create-a-node-template-with-your-cloud-credentials-and-information-from-ec2,Create a node template with your cloud credentials and information from EC2>>
+. <<3-create-a-cluster-with-node-pools-using-the-node-template,Create a cluster with node pools using the node template>>
+
+[#_rke_1_create_your_cloud_credentials]
 [pass]
-<h3><a id="_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
+<h3><a class="anchor" id="_rke_1_create_your_cloud_credentials" href="#_rke_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
 
 . Click *☰ > Cluster Management*.
 . Click *Cloud Credentials*.
@@ -39,8 +44,9 @@ Tab RKE::
 
 *Result:* You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters.
 
+[#_2_create_a_node_template_with_your_cloud_credentials_and_information_from_ec2]
 [pass]
-<h3><a id="_2_create_a_node_template_with_your_cloud_credentials_and_information_from_ec2"></a>2. Create a node template with your cloud credentials and information from EC2</h3>
+<h3><a class="anchor" id="_2_create_a_node_template_with_your_cloud_credentials_and_information_from_ec2" href="#_2_create_a_node_template_with_your_cloud_credentials_and_information_from_ec2"></a>2. Create a node template with your cloud credentials and information from EC2</h3>
 
 Creating a xref:cluster-deployment/infra-providers/infra-providers.adoc#_node_templates[node template] for EC2 will allow Rancher to provision new nodes in EC2. Node templates can be reused for other clusters.
 
@@ -55,8 +61,9 @@ Creating a xref:cluster-deployment/infra-providers/infra-providers.adoc#_node_te
 If you want to use the https://kubernetes.io/docs/concepts/services-networking/dual-stack/[dual-stack] feature, there are additional https://rancher.com/docs/rke//latest/en/config-options/dual-stack#requirements[requirements] that must be taken into consideration.
 ====
 
+[#_3_create_a_cluster_with_node_pools_using_the_node_template]
 [pass]
-<h3><a id="_s3_create_a_cluster_with_node_pools_using_the_node_template"></a>3. Create a cluster with node pools using the node template</h3>
+<h3><a class="anchor" id="_3_create_a_cluster_with_node_pools_using_the_node_template" href="#_3_create_a_cluster_with_node_pools_using_the_node_template"></a>3. Create a cluster with node pools using the node template</h3>
 
 Add one or more node pools to your cluster. For more information about node pools, see xref:cluster-deployment/infra-providers/infra-providers.adoc[this section.]
 
@@ -78,8 +85,9 @@ If you want to use the https://kubernetes.io/docs/concepts/services-networking/d
 Tab RKE2::
 +
 --
+[#_rke2_1_create_your_cloud_credentials]
 [pass]
-<h3><a id="_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
+<h3><a class="anchor" id="_rke2_1_create_your_cloud_credentials" href="#_rke2_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
 
 If you already have a set of cloud credentials to use, skip this section.
 
@@ -94,8 +102,9 @@ If you already have a set of cloud credentials to use, skip this section.
 
 *Result:* You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters.
 
+[#_rke2_create_your_cluster]
 [pass]
-<h3><a id="_2_create_your_cluster"></a>2. Create your cluster</h3>
+<h3><a class="anchor" id="_create_your_cluster" href="#_create_your_cluster"></a>Create your cluster</h3>
 
 . Click *☰ > Cluster Management*.
 . On the *Clusters* page, click *Create*.
