API ref page links

--- a/versions/latest/modules/en/pages/api/quickstart.adoc
+++ b/versions/latest/modules/en/pages/api/quickstart.adoc
@@ -46,7 +46,7 @@ For more information on available kubeconfig options, see the https://kubernetes
 
 == API kubectl Example
 
-In this example, we'll show how to use kubectl to create a project, followed by deleting it. For a list of other Rancher resources available, refer to the xref:api/api-reference.adoc[API Reference] page.
+In this example, we'll show how to use kubectl to create a project, followed by deleting it. For a list of other Rancher resources available, refer to the xref:api/reference.adoc[API Reference] page.
 
 [NOTE]
 ====
