--- a/versions/latest/modules/en/pages/api/v3-rancher-api-guide.adoc
+++ b/versions/latest/modules/en/pages/api/v3-rancher-api-guide.adoc
@@ -1,6 +1,6 @@
 = Previous v3 Rancher API Guide
 
-Rancher v2.8.0 introduced the Rancher Kubernetes API (RK-API). The previous v3 Rancher API is still available. This page describes the v3 API. For more information on RK-API, see the xref:api/quickstart.adoc[RK-API quickstart] and xref:api/api-reference.adoc[reference guide].
+Rancher v2.8.0 introduced the Rancher Kubernetes API (RK-API). The previous v3 Rancher API is still available. This page describes the v3 API. For more information on RK-API, see the xref:api/quickstart.adoc[RK-API quickstart] and xref:api/reference.adoc[reference guide].
 
 == How to Use the API
 
